--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "penlf",
   "version": "0.3.0",
   "description": "a simple rich text editor.",
-  "main": "src/Penlf.js",
+  "main": "dist/Penlf.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
