--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "penlf",
-  "version": "0.3.0",
+  "version": "0.3.3",
   "description": "a simple rich text editor.",
-  "main": "dist/Penlf.js",
+  "main": "src/Penlf.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
